@@ -1744,6 +1744,9 @@ cplus(object,object);
 object
 Icall_error_handler(object,object,int,...);
 
+void *
+gcl_gmp_alloc(size_t);
+
 #if defined (__MINGW32__)
 int bcmp ( const void *s1, const void *s2, size_t n );
 void bcopy ( const void *s1, void *s2, size_t n );
